[package]
name = "moba_server"
version = "0.1.0"
authors = ["Zerve0 <zerve0@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pretty_env_logger = "0.4.0"
legion = "0.2.1"
#legion = { git = "https://github.com/TomGillen/legion" }
ws = "*"
nalgebra = "0.18"
ncollide2d = "0.20"
nphysics2d = "0.12"
tokio = { version="0.2.11", features = ["macros", "sync"] }
webrtc-unreliable = "0.4.0"
hyper = { version = "0.13.2", features = ["stream"] }
futures = "0.3.4"
uuid = { version = "0.8.1", features = ["v4"] }
protobuf = "2.10.1"