[package]
name = "moba_server"
version = "0.1.0"
authors = ["Zerve0 <zerve0@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pretty_env_logger = "0.4.0"
legion = "0.2.1"
glam = { version = "0.8.6", features = ["serde"] }
ncollide2d = "0.20"
tokio = { version = "0.2.11", features = ["macros", "sync", "time"] }
webrtc-unreliable = "0.4.0"
futures = "0.3.4"
uuid = { version = "0.8.1", features = ["v4"] }
protobuf = "2.10.1"
my_internet_ip = "0.1.1"
warp = { version = "0.2", features = ["websocket"] }
bytes = "0.5.4"
futures-util = "0.3.4"
itertools = "0.9.0"
serde = { version = "1.0.106", features = ["derive"] }
serde_json = "1.0.51"